# pal_debug_tts

./: CMakeLists.txt  README  README.md  manifest.xml  package.xml
scripts/: pal_debug_tts.py  pal_speak.py  pal_topic_tts.py
