<package>

  <name>pal_debug_tts</name>
  <description>Simple utilities for debugging use with REEM</description>
  <version>0.1.0</version>
  <maintainer email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</maintainer>
  <author>Siegfried-A. Gevatter Pujals</author>
  <license>ISC License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>pal_python</run_depend>
  <run_depend>rostopic</run_depend>

</package>
